hphp/hack/test/typecheck/modules/module_interfaces.php.exp
File "module_interfaces.php--B.php", line 5, characters 20-20:
Cannot access an internal element from module `A` in module `B` (Typing[4444])
  File "module_interfaces.php--A.php", line 6, characters 11-11:
  This is from module `A`
